8315369: [JVMCI] failure to attach to a libgraal isolate during shutdown should not be fatal

Reviewed-by: never